// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetReplyAndGetArticle GetArticle authenticated fields returns null for non-logged users 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "requestedForReply": null,
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle feedbacks should work: feedback loading test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [
        Object {
          "createdAt": "2015-01-01T12:10:33Z",
          "feedbackCount": 1,
          "feedbacks": Array [],
          "negativeFeedbackCount": 1,
          "positiveFeedbackCount": 0,
        },
        Object {
          "createdAt": "2015-01-01T12:10:30Z",
          "feedbackCount": 1,
          "feedbacks": Array [
            Object {
              "id": "foo__bar__test-user__test-app",
              "vote": "UPVOTE",
            },
          ],
          "negativeFeedbackCount": 0,
          "positiveFeedbackCount": 1,
        },
        Object {
          "createdAt": "2015-01-01T12:10:32Z",
          "feedbackCount": 0,
          "feedbacks": Array [],
          "negativeFeedbackCount": 0,
          "positiveFeedbackCount": 0,
        },
        Object {
          "createdAt": "2015-01-01T12:10:31Z",
          "feedbackCount": 0,
          "feedbacks": Array [],
          "negativeFeedbackCount": 0,
          "positiveFeedbackCount": 0,
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle fetches more than 10 reply requests 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "replyRequestCount": 11,
      "replyRequests": Array [
        Object {
          "reason": "Reason 0",
        },
        Object {
          "reason": "Reason 1",
        },
        Object {
          "reason": "Reason 2",
        },
        Object {
          "reason": "Reason 3",
        },
        Object {
          "reason": "Reason 4",
        },
        Object {
          "reason": "Reason 5",
        },
        Object {
          "reason": "Reason 6",
        },
        Object {
          "reason": "Reason 7",
        },
        Object {
          "reason": "Reason 8",
        },
        Object {
          "reason": "Reason 9",
        },
        Object {
          "reason": "Reason 10",
        },
      ],
      "text": "Popular",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle get specified article and articleCategories with DELETED status 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleCategories": Array [
        Object {
          "category": Object {
            "description": "詐騙貼圖、假行銷手法。",
            "id": "c2",
            "title": "免費訊息詐騙",
          },
          "categoryId": "c2",
        },
      ],
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle get specified article and articleCategories with NORMAL status 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleCategories": Array [
        Object {
          "category": Object {
            "description": "對同性婚姻的恐懼、愛滋病的誤解與的防疫相關釋疑。",
            "id": "c1",
            "title": "性少數與愛滋病",
          },
          "categoryId": "c1",
          "id": "foo__c1",
        },
      ],
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle relatedArticles should work: relatedArticle filter test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WyJmb28zIl0=",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.9489213,
          },
          Object {
            "cursor": "WyJmb28yIl0=",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.9210748,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle relatedArticles should work: relatedArticle no-param test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WyJmb28zIl0=",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.9489213,
          },
          Object {
            "cursor": "WyJmb28yIl0=",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.9210748,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle relatedArticles should work: relatedArticle sorting test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WzAuOTIxMDc0OCwiZm9vMiJd",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.9210748,
          },
          Object {
            "cursor": "WzAuOTQ4OTIxMywiZm9vMyJd",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.9489213,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle should allow filtering article replies 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [
        Object {
          "reply": Object {
            "id": "fofo",
          },
          "replyId": "fofo",
          "status": "NORMAL",
        },
        Object {
          "reply": Object {
            "id": "bar2",
          },
          "replyId": "bar2",
          "status": "DELETED",
        },
      ],
      "deletedReplies": Array [
        Object {
          "reply": Object {
            "id": "bar2",
          },
          "replyId": "bar2",
          "status": "DELETED",
        },
      ],
      "normalReplies": Array [
        Object {
          "reply": Object {
            "id": "fofo",
          },
          "replyId": "fofo",
          "status": "NORMAL",
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle should get the specified article & associated replies from ID 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [
        Object {
          "article": Object {
            "id": "foo",
          },
          "articleId": "foo",
          "canUpdateStatus": false,
          "createdAt": "2015-01-01T12:10:30Z",
          "reply": Object {
            "id": "bar",
            "reference": "barbar",
            "text": "bar",
            "type": "NOT_ARTICLE",
          },
          "replyId": "bar",
          "status": "NORMAL",
          "updatedAt": "2015-01-02T12:10:30Z",
        },
      ],
      "references": Array [
        Object {
          "type": "LINE",
        },
      ],
      "replyCount": 1,
      "replyRequestCount": 2,
      "replyRequests": Array [
        Object {
          "feedbackCount": 2,
          "negativeFeedbackCount": 1,
          "positiveFeedbackCount": 1,
          "reason": "Reason foo",
        },
        Object {
          "feedbackCount": 0,
          "negativeFeedbackCount": 0,
          "positiveFeedbackCount": 0,
          "reason": null,
        },
      ],
      "requestedForReply": true,
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle should return empty articleReply when there is none 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply should allow filtering article replies 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "articleReplies": Array [
        Object {
          "article": Object {
            "id": "foo",
          },
          "articleId": "foo",
          "status": "DELETED",
        },
        Object {
          "article": Object {
            "id": "foo2",
          },
          "articleId": "foo2",
          "status": "NORMAL",
        },
        Object {
          "article": Object {
            "id": "foo3",
          },
          "articleId": "foo3",
          "status": "DELETED",
        },
      ],
      "deletedReplies": Array [
        Object {
          "article": Object {
            "id": "foo",
          },
          "articleId": "foo",
          "status": "DELETED",
        },
        Object {
          "article": Object {
            "id": "foo3",
          },
          "articleId": "foo3",
          "status": "DELETED",
        },
      ],
      "normalReplies": Array [
        Object {
          "article": Object {
            "id": "foo2",
          },
          "articleId": "foo2",
          "status": "NORMAL",
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply should get the specified reply & associated articles from ID 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "articleReplies": Array [
        Object {
          "article": Object {
            "text": "Lorum ipsum",
          },
          "articleId": "foo",
          "canUpdateStatus": true,
        },
      ],
      "reference": "barbar",
      "text": "bar",
      "type": "NOT_ARTICLE",
    },
  },
}
`;
